--- a/alpha/accounts/templates/userena/profile_form.html
+++ b/alpha/accounts/templates/userena/profile_form.html
@@ -4,6 +4,12 @@
 
 {% block title %}{% trans "Account setup" %}{% endblock %}
 
+{% block userena_head %}
+    {{ block.super }}
+    <script src="{{STATIC_URL}}js/jquery.dj.selectable.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/accounts/account-edit-page.js" type="text/javascript"></script>
+{% endblock %}
+
 {% block content_title %}<h2>{% blocktrans with profile.user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
 
 {% block content %}
@@ -18,19 +24,68 @@
         </ul>
 
         {% csrf_token %}
-        <div class="box account-form visible">            
-            <p><label for="id_first_name">First name:</label>{{form.first_name}}</p>
-            <p><label for="id_last_name">Last name:</label>{{form.last_name}}</p>
-            <p>
-                <label for="id_mugshot">Mugshot:</label> 
-                <input type="file" name="mugshot" id="id_mugshot"> 
-                <span class="helptext">A personal image displayed in your profile.</span>
-            </p>
-            <p>
-                <label for="id_date_of_birth">Date of birth:</label>
-                {{form.date_of_birth}}
-            </p>
-            <input type="submit" class="submit standart button" value="{% trans "Save changes" %}" />
+        <div class="box account-form visible">
+            {% if why_message %}
+                <div class="why-message">
+                    {% if why_message == "native_region_required" %}
+                        You need to specify your foreign region to have ability to setup new ads
+                    {% endif %}
+                </div>
+            {% endif %}
+            <table class="edit-profile-table">
+                <tr>
+                    <td>
+                        <label for="id_first_name">First name:</label>
+                    </td>
+                    <td>
+                        {{form.first_name}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="id_last_name">Last name:</label>
+                    </td>
+                    <td>
+                        {{form.last_name}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="id_mugshot">Mugshot:</label> 
+                
+                    </td>
+                    <td>
+                        <input type="file" name="mugshot" id="id_mugshot"> 
+                        <span class="helptext">A personal image displayed in your profile.</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="id_date_of_birth">Date of birth:</label>
+                    </td>
+                    <td>
+                        {{form.date_of_birth}}
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <div class="checkbox">
+                            {{form.not_from_canada}}
+                            <label for="id_not_from_canada"></label>
+                        </div>                        
+                        <label for="id_not_from_canada">I am not from Canada</label>
+                    </td>
+                </tr>
+                <tr class="native-region-tr">
+                    <td>
+                        <label for="id_native_region">Native region:</label>
+                    </td>
+                    <td>
+                        {{form.native_region}}
+                    </td>
+                </tr>
+            </table>            
+            <input type="submit" class="submit standart button" value="{% trans "Save profile" %}" />
         </div>        
     </div>    
 </form>
