--- a/alpha/event/static/styles/widgets.css
+++ b/alpha/event/static/styles/widgets.css
@@ -11,6 +11,9 @@
     box-shadow: none;
     padding: 0 5px;
     height: 20px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
 }
 
 .modern textarea {
@@ -482,4 +485,8 @@ fieldset legend{
 
 .pac-container {
     z-index: 9000 !important;
+}
+
+.danger-action {
+    color: #9c1a00;
 }
